Fixing bugs, adding prototip to timeline and removing whitespace around timeline

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -4,9 +4,9 @@
 
 	#canvas {
 			position: relative;
-			left: 12%;
 			top: 0px;
-			width: 76%;
+			left: 2%;
+			width: 96%;
 			height: 100%;
 			padding: 0px;
 			margin: 0px;			
@@ -16,9 +16,8 @@
 	#maincanvas {
 			position: relative;
 			display: block;
-			left: 10%;
-			top: 50px;
-			width: 80%;
+			top: 0px;
+			width: 100%;
 			height: 100%;
 			background-color: #fff;	
 			border: 0px;
@@ -63,6 +62,7 @@
 	
 	.box {
 		padding-top: 2px;
+		padding-left: 3px;
 	}
 
 	
@@ -85,7 +85,7 @@
 		text-align: center;
 		width: 20%;
 		top: 100%;
-		margin-top: 20px;
+		margin-top: 10px;
 		color: #8c8c8c;
 		background-color: #FFF;
 	}
@@ -94,7 +94,7 @@
 		text-align: center;
 		width: 20%;
 		top: 100%;
-		margin-top: 20px;
+		margin-top: 5px;
 		background-color: #FFF;
 	}
 	
